--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,6 +14,7 @@
  *= require_self
  *= require themify-icons
  *= require font-awesome
+ *= require_tree .
  */
 @import "themify-icons";
 @import "font-awesome";
